--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "ansi_up": "^1.3.0",
-    "encoding": "^0.1.12",
+    "iconv-lite": "^0.4.13",
     "sqlite3": "^3.1.4"
   }
 }
