--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
   "dependencies": {
     "ansi_up": "^1.3.0",
     "iconv-lite": "^0.4.13",
-    "sqlite3": "^3.1.4"
+    "lowdb": "^0.13.1"
   }
 }
